force-app/main/default/objects/CARE_CC_Batch__c/CARE_CC_Batch__c.object-meta.xml
<CustomObject>
    <description>CARE CC batch header information.</description>
    <label>CARE CC Batch</label>
    <nameField>
        <displayFormat>CC{0000000000}</displayFormat>
        <label>NAME (Sequence No)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE CC Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>