force-app/main/default/objects/CARE_CC_Batch__c/fields/BATCH_STATUS_CODE__c.field-meta.xml
<CustomField>
    <fullName>BATCH_STATUS_CODE__c</fullName>
    <label>BATCH STATUS CODE</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>