force-app/main/default/objects/CARE_CC_Batch__c/fields/BATCH_TYPE_NO__c.field-meta.xml
<CustomField>
    <fullName>BATCH_TYPE_NO__c</fullName>
    <label>BATCH TYPE NO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASE Adjustments-CR</fullName>
            </value>
            <value>
                <fullName>CASE Adjustments-FR</fullName>
            </value>
            <value>
                <fullName>TRANSFERS CMD-CR</fullName>
            </value>
            <value>
                <fullName>TRANSFERS CMD-FR</fullName>
            </value>
            <value>
                <fullName>C AE CARE upload</fullName>
            </value>
            <value>
                <fullName>V Related CC</fullName>
            </value>
            <value>
                <fullName>V Result ReEnro - CR</fullName>
            </value>
            <value>
                <fullName>V Result ESA H R C</fullName>
            </value>
            <value>
                <fullName>V Result ESA NOAGGR</fullName>
            </value>
            <value>
                <fullName>V Result ESA Result</fullName>
            </value>
            <value>
                <fullName>V Result ReEnro - FR</fullName>
            </value>
            <value>
                <fullName>V Result Incomplete</fullName>
            </value>
            <value>
                <fullName>V Result Nothing Att</fullName>
            </value>
            <value>
                <fullName>V Result Denial</fullName>
            </value>
            <value>
                <fullName>V Result Req Drop</fullName>
            </value>
            <value>
                <fullName>V Related Drop</fullName>
            </value>
            <value>
                <fullName>V Reminder CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>