force-app/main/default/objects/CARE_CC_Batch__c/fields/CC_BATCH_NO__c.field-meta.xml
<CustomField>
    <fullName>CC_BATCH_NO__c</fullName>
    <externalId>true</externalId>
    <label>CC BATCH NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>