force-app/main/default/objects/CARE_CC_Batch__c/fields/CC_FILE_NAME__c.field-meta.xml
<CustomField>
    <fullName>CC_FILE_NAME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC FILE NAME</label>
    <length>254</length>
    <type>Text</type>
</CustomField>