force-app/main/default/objects/CARE_CC_Batch__c/fields/CC_SENT_DATE__c.field-meta.xml
<CustomField>
    <fullName>CC_SENT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC SENT DATE</label>
    <type>Date</type>
</CustomField>