force-app/main/default/objects/CARE_CC_Batch__c/fields/EXTERNAL_ID__c.field-meta.xml
<CustomField>
    <fullName>EXTERNAL_ID__c</fullName>
    <displayFormat>CCX{0000000000}</displayFormat>
    <label>EXTERNAL ID</label>
    <type>AutoNumber</type>
</CustomField>