force-app/main/default/objects/CARE_CC_Batch__c/fields/MAIL_FILE_NAME__c.field-meta.xml
<CustomField>
    <fullName>MAIL_FILE_NAME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MAIL FILE NAME</label>
    <length>254</length>
    <type>Text</type>
</CustomField>