force-app/main/default/objects/CARE_CC_Batch__c/fields/MAIL_SENT_DATE__c.field-meta.xml
<CustomField>
    <fullName>MAIL_SENT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MAIL SENT DATE</label>
    <type>Date</type>
</CustomField>