force-app/main/default/objects/CARE_CC_Batch__c/fields/SA_FILE_NAME2__c.field-meta.xml
<CustomField>
    <fullName>SA_FILE_NAME2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SA FILE NAME2</label>
    <length>254</length>
    <type>Text</type>
</CustomField>