force-app/main/default/objects/CARE_CC_Batch__c/fields/SA_SENT_DATE__c.field-meta.xml
<CustomField>
    <fullName>SA_SENT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SA SENT DATE</label>
    <type>Date</type>
</CustomField>