force-app/main/default/objects/CARE_CC_Batch__c/fields/USER_NAME_CARE1__c.field-meta.xml
<CustomField>
    <fullName>USER_NAME_CARE1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>USER NAME CARE1</label>
    <type>Date</type>
</CustomField>